# Claude-Repo-2

./: .gitignore  DATABASE.md  GS_Report_Extractor (22).html  Overview tab(s).html  README.md  compare_all .html  employee_bar.html  employee_line.html  employee_radar.html  goals.html  package-lock.json  package.json  points.html  trifecta.html
.github/workflows/: build.yml
frontend/: index.html
frontend/js/: bridge.js  page-wiring.js
frontend/pages/: archive.html  compare.html  employee-bar.html  employee-line.html  employee-radar.html  extractor.html  goals.html  overview.html  points.html  trifecta.html
mockups/: concept-a-fluent.html  concept-b-dashboard.html  concept-c-ribbon.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: archive.rs  config.rs  employees.rs  files.rs  goals.rs  import.rs  metrics.rs  mod.rs  notes.rs  points.rs  records.rs  store.rs  trifecta.rs
src/css/: app.css
src/js/: app.js
src/js/lib/: charts.js  format.js  tauri-bridge.js
src/js/pages/: archive.js  compare.js  employee-bar.js  employee-line.js  employee-radar.js  extractor.js  goals.js  overview.js  points.js  trifecta.js
