[package]
name = "gs-report-analytics"
version = "1.0.0"
description = "GS Report Analytics Dashboard with SQLite Archive Database"
authors = ["GS Analytics"]
edition = "2021"

[lib]
name = "gs_report_analytics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
