[package]
name = "gs-extractor"
version = "0.1.0"
edition = "2021"
description = "GS Report Extractor - Tauri Desktop App"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "gs_extractor_lib"
crate-type = ["lib", "cdylib", "staticlib"]
